--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -2,7 +2,7 @@
 <idea-plugin require-restart="true">
     <id>org.bookmark.pro.id</id>
     <name>MarkBook-Pro</name>
-    <version>2021.2.1</version>
+    <version>20230101</version>
     <vendor email="xingrenfan@hotmail.com" url="https://github.com/xingrenfan/bookmark-pro">XingRenFan</vendor>
 
     <description><![CDATA[
@@ -28,7 +28,7 @@
     ]]>
     </change-notes>
 
-    <idea-version since-build="212.0" until-build="233.0"/>
+    <idea-version since-build="231.8109.175" until-build="233.0"/>
 
     <!-- 插件还可以指定可选的插件依赖项。在这种情况下，即使它依赖的插件没有安装或启用，插件也会加载，但插件的部分功能将不可用。 -->
     <depends>com.intellij.modules.lang</depends>
