modify version code

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # 插件信息
 pluginGroup=org.bookmark.pro
 pluginName=Bookmark-Pro
-pluginVersion=2022020501
+pluginVersion=20220201
 # IDEA 2023.3.3 版本
 platformType=IC
 platformVersion=2022.2
