--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ intellij {
 
 patchPluginXml {
     sinceBuild = '222.3345.118'
-    untilBuild = '233.*'
+    untilBuild = '222.4554.10'
 }
 
 tasks.buildSearchableOptions {
