--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # 插件信息
 pluginGroup=org.bookmark.pro
 pluginName=Bookmark-Pro
-pluginVersion=20220201
+pluginVersion=212-222.01.01
 # IDEA 2023.3.3 版本
 platformType=IC
-platformVersion=2022.2
+platformVersion=2021.2.2
 # Gradle 版本
 gradleVersion=8.6
 org.gradle.jvmargs=-Duser.country=US -Dkotlin.daemon.jvm.options=-Xmx1600m -Dfile.encoding=UTF-8
