modify properties code

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
-# 插件信息
+# æä»¶ä¿¡æ¯
 pluginGroup=org.bookmark.pro
 pluginName=Bookmark-Pro
 pluginVersion=212-222.01.04
-# IDEA 2023.3.3 版本
+# IDEA 2023.3.3 çæ¬
 platformType=IC
-platformVersion=2021.2.1
+platformVersion=2021.2.2
 sinceBuildVersion=212.5080.55
 untilBuildVersion=222.*
-# Gradle 版本
+# Gradle çæ¬
 gradleVersion=8.6
 org.gradle.jvmargs=-Duser.country=US -Dkotlin.daemon.jvm.options=-Xmx1600m -Dfile.encoding=UTF-8
