--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -39,7 +39,7 @@
         <!-- 激活监听器 -->
         <postStartupActivity implementation="org.bookmark.pro.listeners.app.AppActivationService"/>
         <!-- 配置 -->
-        <applicationConfigurable instance="org.bookmark.pro.dialogs.setting.BookmarkSettingForm" id="bookmark.pro.config" displayName="Bookmark Pro"/>
+        <applicationConfigurable instance="org.bookmark.pro.windows.setting.BookmarkSettingForm" id="bookmark.pro.config" displayName="Bookmark Pro"/>
         <!-- 左边栏设置锚点，展示窗口 -->
         <toolWindow id="Bookmark-Pro" anchor="right" icon="/icons/bookmark.svg" factoryClass="org.bookmark.pro.extensions.BookmarkWindowFactory" secondary="true"/>
         <!-- 书签持久化 -->
