--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
-# æä»¶ä¿¡æ¯
+# 插件信息
 pluginGroup=org.bookmark.pro
 pluginName=Bookmark-Pro
-pluginVersion=212-222.01.08
-# IDEA 2023.3.3 çæ¬
+pluginVersion=223-241.01.04
+# IDEA 2023.3.3 版本
 platformType=IC
-platformVersion=2021.2.2
-sinceBuildVersion=212.5080.55
-untilBuildVersion=222.*
-# Gradle çæ¬
+platformVersion=2024.1.4
+sinceBuildVersion=231.8109.175
+untilBuildVersion=241.*
+# Gradle 版本
 gradleVersion=8.6
 org.gradle.jvmargs=-Duser.country=US -Dkotlin.daemon.jvm.options=-Xmx1600m -Dfile.encoding=UTF-8
