添加通过数据库备份同步

--- a/build.gradle
+++ b/build.gradle
@@ -69,3 +69,7 @@ patchPluginXml {
 tasks.buildSearchableOptions {
     enabled = false
 }
+
+dependencies {
+    implementation 'mysql:mysql-connector-java:5.1.49'
+}
