--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,18 @@
 # 插件信息
 pluginGroup=org.bookmark.pro
 pluginName=Bookmark-Pro
-pluginVersion=223-241.01.04
+pluginVersion=223-241.01.06
 # IDEA 2023.3.3 版本
 platformType=IC
-platformVersion=2024.1.4
+platformVersion=2024.1.6
 sinceBuildVersion=231.8109.175
 untilBuildVersion=241.*
 # Gradle 版本
 gradleVersion=8.6
 org.gradle.jvmargs=-Duser.country=US -Dkotlin.daemon.jvm.options=-Xmx1600m -Dfile.encoding=UTF-8
+
+
+#systemProp.http.proxyHost=7890
+#systemProp.http.proxyPort=127.0.0.1
+#systemProp.https.proxyHost=7890
+#systemProp.https.proxyPort=127.0.0.1
